modified:   src/components/comp_NavbarHome/navbarhome.js 	modified:   src/components/comp_NavbarHome/style.css

--- a/src/components/comp_NavbarHome/style.css
+++ b/src/components/comp_NavbarHome/style.css
@@ -36,202 +36,8 @@ body, html {
   margin-left: 10px; /* Ajustez cette valeur pour augmenter/diminuer l'espace à gauche */
 }
 
-/* STRUCTURE pour le register*/
-.wrapper {
-  display: flex;
-  align-items: center;
-  flex-direction: column; 
-  justify-content: center;
-  width: 100%;
-  min-height: 100%;
-  padding: 20px;
-}
-
-#formContent {
-  -webkit-border-radius: 10px 10px 10px 10px;
-  border-radius: 10px 10px 10px 10px;
-  background: #fff;
-  padding: 30px;
-  width: 90%;
-  max-width: 450px;
-  position: relative;
-  padding: 0px;
-  -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-  text-align: center;
-}
-
-#formFooter {
-  background-color: #f6f6f6;
-  border-top: 1px solid #dce8f1;
-  padding: 25px;
-  text-align: center;
-  -webkit-border-radius: 0 0 10px 10px;
-  border-radius: 0 0 10px 10px;
-}
-
-#formHeader {
-    background-color: #f6f6f6;
-    border-top: 1px solid #dce8f1;
-    text-align: center;
-    -webkit-border-radius: 10px 10px 0px 0px;
-    border-radius: 10px 10px 0px 0px;
-  }
 
 
-
-/* TABS */
-
-h2.inactive {
-  color: #cccccc;
-}
-
-h2.active {
-  color: #0d0d0d;
-  border-bottom: 2px solid #5fbae9;
-}
-
-
-.container h1 .red {
-  color: #D50000; /* For "Bet" */
-  font-style: italic;
-}
-.container::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.3); /* This creates a dark overlay. Adjust the 0.3 as needed. */
-  z-index: 0;
-}
-
-/* FORM TYPOGRAPHY*/
-
-input[type=button], .btn-register, input[type=reset]  {
-  background-color: #56baed;
-  border: none;
-  color: white;
-  padding: 15px 80px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  text-transform: uppercase;
-  font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 rgba(243, 246, 248, 0.4);
-  box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
-  margin: 5px 20px 40px 20px;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-input[type=button]:hover, .btn-register:hover, input[type=reset]:hover  {
-  background-color: #39ace7;
-}
-
-input[type=button]:active, .btn-register:active, input[type=reset]:active  {
-  -moz-transform: scale(0.95);
-  -webkit-transform: scale(0.95);
-  -o-transform: scale(0.95);
-  -ms-transform: scale(0.95);
-  transform: scale(0.95);
-}
-
-input[type=text], input[type=password], input[type=email] {
-  background-color: #f6f6f6;
-  border: none;
-  color: #0d0d0d;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 5px;
-  width: 85%;
-  border: 2px solid #f6f6f6;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -ms-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
-}
-
-input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
-  background-color: #fff;
-  border-bottom: 2px solid #5fbae9;
-}
-
-input[type=text]::placeholder, input[type=password]::placeholder, input[type=email]::placeholder {
-  color: #cccccc;
-}
-
-
-
-/* ANIMATIONS */
-
-/* Simple CSS3 Fade-in-down Animation */
-.fadeInDown {
-  -webkit-animation-name: fadeInDown;
-  animation-name: fadeInDown;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-@-webkit-keyframes fadeInDown {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInDown {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-/* Simple CSS3 Fade-in Animation */
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-.fadeIn {
-  opacity:0;
-  -webkit-animation:fadeIn ease-in 1;
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
-
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
-
-  -webkit-animation-duration:1s;
-  -moz-animation-duration:1s;
-  animation-duration:1s;
-}
 .menu-button {
   background: none;
   border: none;
@@ -260,6 +66,7 @@ input[type=text]::placeholder, input[type=password]::placeholder, input[type=ema
   overflow-y: auto; /* permet le défilement si le contenu est trop long */
   transition: transform 1s ease-in-out;
   transform: translateX(100%); /* initialement hors de l'écran */
+  text-align: center;
 }
 
 .menu-open {
@@ -279,3 +86,37 @@ input[type=text]::placeholder, input[type=password]::placeholder, input[type=ema
 }
 
 
+
+
+.arrow-icon {
+  width: 20px;
+  height: 20px;
+  display: block;
+  margin: auto;  /* Centrer verticalement */
+}
+
+.arrow-icon:before {
+  content: '<';  /* Créez une flèche vers la gauche */
+  font-size: 20px;
+  color: white;
+}
+
+.menu-open {
+  display: flex;       /* Faire en sorte que les éléments à l'intérieur soient flexibles */
+  flex-direction: column; /* Disposer les éléments verticalement */
+  justify-content: center; /* Centrer le contenu verticalement */
+  height: 100vh;          /* Prendre toute la hauteur de la vue */
+  width: 250px;           /* Largeur fixe pour le menu */
+  background-color: rgba(0, 0, 0, 0.7); /* Fond noirâtre */
+  position: absolute;     /* Positionnement absolu */
+  right: 0;               /* Collé à la droite */
+  top: 0;                 /* Collé au haut */
+}
+
+.arrow-button-outside {
+  position: absolute;  /* Positionnement absolu pour déplacer le bouton librement */
+  right: 250px;        /* Déplacez-le à gauche juste en dehors du menu. Si votre menu a une autre largeur, ajustez cette valeur */
+  top: 50%;            /* Commencez à le positionner au milieu de la fenêtre */
+  transform: translateY(-50%); /* Pour le centrer verticalement */
+  z-index: 1001;       /* Assurez-vous qu'il est au-dessus des autres éléments */
+}
